# MathLib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
include/mathlib/: Utilities.hpp
include/mathlib/core/: Complex.hpp  Matrix.hpp  Vector.hpp
src/: main.cpp
